@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<smartplaylist type="tvshows">
-    <name>Recently Watched TV Shows</name>
+<smartplaylist type="Episodes">
+    <name>In Progress Movies</name>
     <match>all</match>
+    <rule field="inprogress" operator="true" />
     <order direction="descending">lastplayed</order>
 </smartplaylist>
