@@ -5,6 +5,5 @@
     <rule field="lastplayed" operator="notinthelast">
         <value>14 Days</value>
     </rule>
-    <limit>10</limit>
     <order direction="ascending">random</order>
 </smartplaylist>
