@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<smartplaylist type="tvshows">
+    <name>Random TvShows</name>
+    <order direction="ascending">random</order>
+</smartplaylist>
