@@ -5,6 +5,5 @@
     <rule field="lastplayed" operator="inthelast">
         <value>28 Days</value>
     </rule>
-    <limit>10</limit>
     <order direction="descending">lastplayed</order>
 </smartplaylist>
