@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
+<smartplaylist type="movies">
+    <name>Top 250 Movies</name>
+    <match>all</match>
+    <rule field="top250" operator="greaterthan">
+        <value>0</value>
+    </rule>
+    <order direction="ascending">top250</order>
+</smartplaylist>
