@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <smartplaylist type="movies">
-    <name>New Movies</name>
+    <name>Top Rated Movies</name>
     <match>all</match>
-    <order direction="descending">dateadded</order>
+    <order direction="descending">rating</order>
 </smartplaylist>
