@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <smartplaylist type="tvshows">
-    <name>Recently Watched TV Shows</name>
+    <name>Top Rated TvShows</name>
     <match>all</match>
-    <order direction="descending">lastplayed</order>
+    <order direction="descending">rating</order>
 </smartplaylist>
