@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <smartplaylist type="movies">
-    <name>Random Movies</name>
+    <name>Unwatched Movies</name>
     <match>all</match>
-    <rule field="lastplayed" operator="notinthelast">
-        <value>14 Days</value>
+    <rule field="playcount" operator="is">
+        <value>0</value>
     </rule>
     <order direction="ascending">random</order>
 </smartplaylist>
