@@ -1,6 +1,7 @@
 [B]0.9.7[/B]
 Fix resolution flags not showing
 Fix some alignment issues in dialogvideoinfo
+Rearrange widget groups for Default Widgets to get people using library over skin helper
 
 [B]0.9.6[/B]
 Many optimisations of skin code
